--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "",
     "icons": [
         {
-            "src": "/favicon.ico",
+            "src": "favicon.ico",
             "sizes": "256x256",
             "type": "image/png"
         }
